release/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-api
  namespace: sandbox
  labels:
    module: note
spec:
  selector:
    matchLabels:
      app: note-api
  replicas: 1
  template:
    metadata:
      labels:
        app: note-api
      name: note-api
    spec:
      containers:
        - name: note-api
          image: josecw/note-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---

# create a service
apiVersion: v1
kind: Service
metadata:
  name: note-api
  namespace: sandbox
  labels:
    app: note-api
    module: note
spec:
  type: NodePort
  selector:
    app: note-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
