release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-ingress
  namespace: sandbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-note-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: note-api
                port:
                  number: 80
